bk_ida/gccida/c0/open_dump_file
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/toplev.c:2265:22: error: must use 'enum' tag to refer to type 'dump_file_index'
int  open_dump_file( dump_file_index index, tree decl) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/toplev.c:2273:1: error: must use 'enum' tag to refer to type 'dump_file_index'
dump_file_index indexa; // [rsp+38h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/toplev.c:2279:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/toplev.c:2309:14: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_pop( TV_DUMP_0); 
             ^~~~~~~~~
             TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/open_dump_file/src/obj/toplev.o] Error 1
